test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-oknil-nil.chpl
//  lhs: unmanaged?  rhs: nil?  ok

class MyClass {  var x: int;  }

var lhs: unmanaged MyClass? = nil;


lhs = nil;


